--- a/README
+++ b/README
@@ -6,14 +6,15 @@ slackbuilds.org in this directory.
 (Though I may or may not submit everything I create here.)
 
 All testing (including downloading the application source being
-build) is NOT done in this directory. 
+build) is NOT done in this repo. 
 
-Instead, I make the tarball for each in this outer directory:
+I do make the tarball for each in this outer directory (ignored
+by git) for use in testing:
 
     $ ./tar-it-up.sh <dir_with_slackbuild>
 
-And then switch to superuser and copy the resulting .tar.gz to /root because
-that's where I'd be doing that normally anyway.
+And then switch to the superuser and copy the resulting .tar.gz to /root
+because that's where I'd be making/installing it normally anyway:
 
     $ sudo -i
     # cp /home/dave/slackbuilds/<package>.tar.gz .
