--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 Dave's Slackbuilds!
 
+**MOVED!** Hello, I am moving my repos to http://ratfactor.com/repos/
+and setting them to read-only ("archived") on GitHub. Thank you, -Dave
+
 There are only the slackbuild files as submitted to
 slackbuilds.org in this directory.
 
